--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "MultiAgentTrading"
 uuid = "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Avery Watts <nagarake@yahoo.com>"]
 version = "0.1.0"
 
 [deps]
